--- a/style.css
+++ b/style.css
@@ -5,9 +5,9 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #f0f0f0;
+    background-color: #97be85ac;
 }
 
 canvas {
-    border: 1px solid black;
+    border: 10px double black;
 }
